--- a/index.html
+++ b/index.html
@@ -363,81 +363,109 @@
           <h2 class="scale-up-ver-center text-center pt-4">
             ប្រភេទនៃការកែច្នៃ
           </h2>
-          <div class="row g-5 mt-1">
+          <div class="row g-3">
             <!-- 1 -->
             <div class="col-6 col-md-3">
-              <div class="content text-center">
-                <div
-                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  style="width: 60px; height: 60px"
-                >
-                  <img
-                    src="assets/image/recycle type/barrel.png"
-                    alt=""
-                    class=""
-                  />
+              <div
+                class="card card-responsive p-4"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="50"
+                data-aos-offset="0"
+              >
+                <div class="content text-center">
+                  <div
+                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  >
+                    <img
+                      src="assets/image/recycle type/barrel.png"
+                      alt=""
+                      class=""
+                    />
+                  </div>
+                  <h4>ការកែច្នៃដោយគីមី</h4>
+                  <p>
+                    ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
+                    ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី។
+                  </p>
                 </div>
-                <h4>ការកែច្នៃដោយគីមី</h4>
-                <p>
-                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
-                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
-                </p>
               </div>
             </div>
+            <!-- 2 -->
             <div class="col-6 col-md-3">
-              <div class="content text-center">
-                <div
-                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  style="width: 60px; height: 60px"
-                >
-                  <img
-                    src="assets/image/recycle type/machin.png"
-                    alt=""
-                    class=""
-                  />
+              <div
+                class="card card-responsive p-4"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="50"
+                data-aos-offset="0"
+              >
+                <div class="content text-center">
+                  <div
+                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  >
+                    <img
+                      src="assets/image/recycle type/machin.png"
+                      alt=""
+                      class=""
+                    />
+                  </div>
+                  <h4>ការកែច្នៃមេកានិច</h4>
+                  <p>
+                    ការបំបែកសំណល់ទៅជាវត្ថុធាតុដើម ហើយប្រើឡើងវិញដើម្បីផលិតផលថ្មី។
+                  </p>
                 </div>
-                <h4>ការកែច្នៃមេកានិច</h4>
-                <p>
-                  ការបំបែកសំណល់ (ដូចជា ប្លាស្ទិក ដែក កញ្ចក់) ទៅជាវត្ថុធាតុដើម ហើយប្រើឡើងវិញដើម្បីផលិតផលថ្មី។
-                </p>
               </div>
             </div>
+            <!-- 3 -->
             <div class="col-6 col-md-3">
-              <div class="content text-center">
-                <div
-                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  style="width: 60px; height: 60px"
-                >
-                  <img
-                    src="assets/image/recycle type/barrel.png"
-                    alt=""
-                    class=""
-                  />
+              <div
+                class="card card-responsive p-4"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="50"
+                data-aos-offset="0"
+              >
+                <div class="content text-center">
+                  <div
+                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  >
+                    <img
+                      src="assets/image/recycle type/organic.png"
+                      alt=""
+                      class=""
+                    />
+                  </div>
+                  <h4>ការកែច្នៃសរីរាង្គ</h4>
+                  <p>ការកែច្នៃសំណល់ដែលរលួយបាន តាមរយៈការធ្វើជាជីកំប៉ុស។</p>
                 </div>
-                <h4>ការកែច្នៃដោយគីមី</h4>
-                <p>
-                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
-                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
-                </p>
               </div>
             </div>
+            <!-- 4 -->
             <div class="col-6 col-md-3">
-              <div class="content text-center">
-                <div
-                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  style="width: 60px; height: 60px"
-                >
-                  <img
-                    src="assets/image/recycle type/barrel.png"
-                    alt=""
-                    class=""
-                  />
+              <div
+                class="card card-responsive p-4"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="50"
+                data-aos-offset="0"
+              >
+                <div class="content text-center">
+                  <div
+                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  >
+                    <img
+                      src="assets/image/recycle type/energy.png"
+                      alt=""
+                      class=""
+                    />
+                  </div>
+                  <h4>ការទាញថាមពល</h4>
+                  <p>
+                    ការដុតសំណល់ ដើម្បីបង្កើតកំដៅ អគ្គិសនី ឬឥន្ធនៈ
+                    ជំនួសការបោះចោលទៅកន្លែងសំរាម
+                  </p>
                 </div>
-                <h4>ការកែច្នៃដោយគីមី</h4>
-                <p>
-                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
-                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
-                </p>
               </div>
             </div>
           </div>
