--- a/e-commerce.html
+++ b/e-commerce.html
@@ -309,16 +309,16 @@
       </nav>
     </header>
     <main>
-      <section>
-        <div class="container my-5">
-          <div class="row align-items-center">
+      <section style="margin-top: 100px; ">
+        <div class="container ">
+          <div class="row g-4">
             <!-- Left Title -->
-            <div class="col-md-6">
-              <h1 class="fw-bold mb-4 fs-kp typing-loop">
+            <div class="col-sm-12 col-md-6">
+              <h3 class="fw-bold mb-4 fs-kp typing-loop fsm mt-5">
                 អត្ថប្រយោជន៍នៃការលក់<span class="text-success"
-                  >ផលិតផលកែឆ្នៃ</span
+                  >ផលិតផលកែច្នៃ</span
                 >
-              </h1>
+              </h3>
               <ul class="list-unstyled fs-5 fs-kp">
                 <li>កាត់បន្ថយកាកសំណល់ និងការបំពុលបរិស្ថាន</li>
                 <li>បង្កើតប្រាក់ចំណេញ និងការងារថ្មី</li>
@@ -330,7 +330,7 @@
               </ul>
             </div>
             <!-- Right Image -->
-            <div class="col-md-6 text-center">
+            <div class="col-sm-12 col-md-6">
               <img
                 src="https://t4.ftcdn.net/jpg/14/25/56/79/360_F_1425567917_ebULPqMIcyqXhZCIczdHMNugIKgLHeaJ.jpg"
                 class="img-fluid rounded shadow"
@@ -349,7 +349,7 @@
             style="margin-bottom: 100px"
             data-aos="fade-left"
           >
-            ផលិតផលប្លាស្ទិចកែឆ្នៃ
+            ផលិតផលប្លាស្ទិចកែច្នៃ
           </h3>
           <div class="row gy-4">
             <!-- Product 1 -->
@@ -644,7 +644,7 @@
             style="margin-bottom: 100px"
             data-aos="fade-left"
           >
-            ផលិតផលក្រដាសកែឆ្នៃ
+            ផលិតផលក្រដាសកែច្នៃ
           </h3>
           <div class="row gy-4">
             <!-- product 1 -->
@@ -665,7 +665,7 @@
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
                     <span>ឈ្មោះ​ ៖</span>​សៀវភៅ
                   </h1>
-                  <p class="card-text fs-kp">តម្លៃ៖​ <span>$3.00</span></p>
+                  <p class="card-text fs-kp">តម្លៃ៖​ <span>$1.00</span></p>
                   <div
                     class="d-flex align-items-center justify-content-between"
                   >
@@ -721,7 +721,7 @@
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
                     <span>ឈ្មោះ​ ៖</span>​ប្រអប់កាតុង
                   </h1>
-                  <p class="card-text fs-kp">តម្លៃ៖​ <span>$2.00</span></p>
+                  <p class="card-text fs-kp">តម្លៃ៖​ <span>$0.25</span></p>
                   <div
                     class="d-flex align-items-center justify-content-between"
                   >
