--- a/pizza4ps.html
+++ b/pizza4ps.html
@@ -110,8 +110,8 @@
     <!-- Contact & Volunteer -->
     <section>
       <h2>ទំនាក់ទំនង</h2>
-      <p>Email: <a href="mailto:beeco.sustainable.kh@gmail.com">beeco.sustainable.kh@gmail.com</a></p>
-      <p>Messenger: <a href="https://www.facebook.com/be.eco.cambodia">Facebook</a> / <a href="https://www.instagram.com/be.eco.sustainable?igsh=YWllYnU4NWhteHcy">Instagram</a></p>
+      <p>Email: <a href="mailto:pizza4ps.kh@gmail.com">pizza4ps.kh@gmail.com</a></p>
+      <p>Messenger: <a href="https://www.facebook.com/pizza4ps">Facebook</a> / <a href="https://www.instagram.com/pizza4ps">Instagram</a></p>
        <p>
         <strong>សូមចំណាំ៖</strong> យើងមិនប្រើ Telegram ឬ WhatsApp សម្រាប់ការទំនាក់ទំនងទេ។ សូមប្រើ Facebook Messenger ឬអ៊ីមែលផ្ទាល់។
       </p>
@@ -123,7 +123,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="loc1">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLoc1">
-        Be Eco Sustainable Shop (Street 464, TTP)
+        Pizza 4P's BKK1
       </button>
     </h2>
     
@@ -131,8 +131,8 @@
       <div class="accordion-body">
           <div class="col-md-4">
     <div class="card p-3">
-      <img src="assets/Kropum/img/beco____-.jpg" alt="">
-      <h5 class="mt-2">Be Eco Sustainable Shop</h5>
+      <img src="assets/Kropum/img/p1.jpg" alt="">
+      <h5 class="mt-2">Pizza 4P's</h5>
       <p>Street 464, TTP</p>
       <p>Wed-Fri 12-6, Weekend 10-6</p>
       <a href="https://maps.app.goo.gl/LoUhX9AiJ2miCTc96" class="btn btn-success btn-sm">View Map</a>
