--- a/reuse.html
+++ b/reuse.html
@@ -27,53 +27,53 @@
     <div class="col-8">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title text-center mb-4">Post New Donation Item</h2>
+          <h2 class="card-title text-center mt-2">វត្ថុសម្រាប់បរិច្ចាគ</h2>
           <form>
             
             <!-- Item Name -->
             <div class="mb-3">
-              <label for="itemName" class="form-label">Item Name</label>
-              <input type="text" class="form-control" id="itemName" placeholder="Enter item name">
+              <label for="itemName" class="form-label">បញ្ជូលឈ្មោះវត្ថុ</label>
+              <input type="text" class="form-control" id="itemName" placeholder="សូមបញ្ចូលឈ្មោះវត្ថុ">
             </div>
 
             <!-- Category -->
             <div class="mb-3">
-              <label for="itemCategory" class="form-label">Category</label>
+              <label for="itemCategory" class="form-label">ប្រភេទ</label>
               <select class="form-select" id="itemCategory">
-                <option selected disabled>Choose category</option>
-                <option value="Clothes">Clothes</option>
-                <option value="Furniture">Furniture</option>
-                <option value="Electronics">Electronics</option>
-                <option value="Books">Books</option>
-                <option value="Others">Others</option>
+                <option selected disabled>ជ្រើសរើសប្រភេទវត្ថុ</option>
+                <option value="Clothes">សម្លៀកបំពាក់</option>
+                <option value="Furniture">សម្ភារៈប្រើប្រាស់</option>
+                <option value="Electronics">ឧបករណ៍អេឡិចត្រូនិក</option>
+                <option value="Books">សៀវភៅ</option>
+                <option value="Others">ផ្សេងៗ</option>
               </select>
             </div>
 
             <!-- Upload Image -->
             <div class="mb-3">
-              <label for="itemImage" class="form-label">Upload Image</label>
+              <label for="itemImage" class="form-label">បញ្ចូលរូបភាព</label>
               <input class="form-control" type="file" id="itemImage">
             </div>
 
             <!-- Contact -->
             <div class="mb-3">
-              <label for="contactInfo" class="form-label">Contact Information</label>
-              <input type="text" class="form-control" id="contactInfo" placeholder="Phone number or Email">
+              <label for="contactInfo" class="form-label">ព័ត៌មានទំនាក់ទំនង</label>
+              <input type="text" class="form-control" id="contactInfo" placeholder="លេខទូរស័ព្ទ ឬ អ៊ីមែល">
             </div>
 
             <!-- Description -->
             <div class="mb-3">
-              <label for="itemDescription" class="form-label">Description</label>
-              <textarea class="form-control" id="itemDescription" rows="3" placeholder="Write a short description..."></textarea>
+              <label for="itemDescription" class="form-label">ការពិពណ៌នា</label>
+              <textarea class="form-control" id="itemDescription" rows="3" placeholder="សូមសរសេរពិពណ៌នាអំពីវត្ថុ..."></textarea>
             </div>
 
             <!-- Buttons -->
             <div class="text-center">
-              <button type="submit" class="btn btn-success me-2">
-                <i class="fa fa-check-circle"></i> Submit
-              </button>
-              <a href="index.html" class="btn btn-secondary">
-                <i class="fa fa-arrow-left"></i> Back
+              <a type="submit" class="btn btn-success me-2" href="used.html#user-posts">
+                <i class="fa fa-check-circle"></i> បញ្ជូន
+              </a>
+              <a href="used.html#user-posts" class="btn btn-secondary">
+                <i class="fa fa-arrow-left"></i> ត្រឡប់
               </a>
             </div>
 
