--- a/event8.html
+++ b/event8.html
@@ -4,37 +4,301 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/theme.css">
+  <title>Forest EcoPreneurs Program</title>
+  <!--CSS-->
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <!--CSS tc-->
+  <link rel="stylesheet" href="assets/css/theme.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome & Swiper CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="assets/Kropum/event1.css">
-  <title>Event8</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+  <!--swiper-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <style>
+    body {
+      font-family: 'Hanuman', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    .hero-banner {
+      background-color: #f8f9fa;
+      padding: 30px 0;
+      border-radius: 10px;
+    }
+
+    .hero-banner img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .quick-info {
+      background: #e9f5ec;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    .quick-info p {
+      margin: 5px 0;
+    }
+
+    .event-description h2 {
+      margin-top: 20px;
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
+
+    .event-description ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .event-description li::before {
+      content: "✅";
+      margin-right: 8px;
+    }
+
+    .swiper-slide img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .btn-cta {
+      margin: 5px 5px 15px 0;
+    }
+  </style>
 </head>
 
 <body>
-  <section class="mt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-lg-6">
-          <div class="hero-banner"><img src="assets/Kropum/img/EVENT3.jpg" class="hero-img" alt="" style="width: 95%;">
+      <header>
+    <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow" style="height: 70px">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="assets/image/green_leaves_round_logo.png" class="logo" style="width: 40px" alt="logo" />
+        </a>
+
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header bg-nav" style="height: 70px">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              <a class="navbar-brand d-block" href="index.html">
+                <img src="assets/image/green_leaves_round_logo.png" style="width: 60px" alt="logo" />
+              </a>
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
-          <p class="mt-5">កាលបរិច្ឆេទ៖ ២៥ កុម្ភៈ ២០២៦</p>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2">
+              <!-- Search Button -->
+              <form class="d-flex mb-2" role="search">
+                <input class="form-control search-1 d-md-none" type="search" placeholder="Search" aria-label="Search" />
+              </form>
+              <li class="nav-item">
+                <a class="nav-link active fs-5 nav-hover" aria-current="page" href="index.html">ទំព័រដើម</a>
+              </li>
+              <li class="nav-item dropdown fs-5">
+                <a class="nav-link nav-hover no-caret dropdown-toggle" href="index.html" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  អត្ថបទ
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">ឯកសារ</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">វីដេអូ</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item fs-5">
+                <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
+              </li>
+              <li class="nav-item fs-5">
+                <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
+              </li>
+              <li class="nav-item fs-5">
+                <a class="nav-link nav-hover" aria-current="page" href="about.html">អំពីយើង</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="col-6 mt-10">
-          <h1 class="text-center">ការប្រកួតរូបភាព អំពី Waste Of life</h1>
-          <p class="text-center text-black-50">កាលបរិច្ឆេទ៖ ២៥ កុម្ភៈ ២០២៦</p>
+        <div class="user-profile d-flex align-items-center">
+          <button class="navbar-toggler border-0 shadow-none fs-4" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Search Button -->
+          <form class="d-flex" role="search">
+            <input class="form-control mx-2 search-2" type="search" placeholder="Search" aria-label="Search" />
+          </form>
+          <!-- notification -->
+          <div class="dropdown pt-2">
+            <button class="btn dropdown-toggle no-caret" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-bell fs-5"></i>
+              <span class="badge bg-danger rounded-circle position-absolute start-50 text-center"
+                style="font-size: 10px">
+                4
+              </span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-center dropdown-menu-scroll">
+              <div class="notifi d-flex align-items-center justify-content-between border-bottom px-2">
+                <h5>Notification</h5>
+                <i class="bi bi-three-dots"></i>
+              </div>
+              <a href="" class="text-decoration-none py-2 pe-2 m-0 float-end" style="font-size: 14px">See all</a>
+              <!-- 1 -->
+              <li>
+                <a class="dropdown-item" href="#">
+                  <div class="py-2 d-flex align-items-center">
+                    <img src="assets/img/avata/avatar-1.jpg" alt="" class="rounded-circle"
+                      style="width: 40px; height: 40px" />
+                    <div class="content ms-3" style="max-width: 220px">
+                      <p class="fw-bolder mb-1">Pozz Mao</p>
+                      <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Neque, at.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <!-- 2 -->
+              <li>
+                <a class="dropdown-item" href="#">
+                  <div class="py-2 d-flex align-items-center">
+                    <img src="assets/img/avata/avatar-2.jpg" alt="" class="rounded-circle"
+                      style="width: 40px; height: 40px" />
+                    <div class="content ms-3" style="max-width: 220px">
+                      <p class="fw-bolder mb-1">John Doe</p>
+                      <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Neque, at.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <!-- 3 -->
+              <li>
+                <a class="dropdown-item" href="#">
+                  <div class="py-2 d-flex align-items-center">
+                    <img src="assets/img/avata/avatar-3.jpg" alt="" class="rounded-circle"
+                      style="width: 40px; height: 40px" />
+                    <div class="content ms-3" style="max-width: 220px">
+                      <p class="fw-bolder mb-1">Lina</p>
+                      <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Neque, at.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <!-- 4 -->
+              <li>
+                <a class="dropdown-item" href="#">
+                  <div class="py-2 d-flex align-items-center">
+                    <img src="assets/img/avata/avatar-4.jpg" alt="" class="rounded-circle"
+                      style="width: 40px; height: 40px" />
+                    <div class="content ms-3" style="max-width: 220px">
+                      <p class="fw-bolder mb-1">Devid</p>
+                      <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Neque, at.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <!-- 5 -->
+              <li>
+                <a class="dropdown-item" href="#">
+                  <div class="py-2 d-flex align-items-center">
+                    <img src="assets/img/avata/avatar-5.jpg" alt="" class="rounded-circle"
+                      style="width: 40px; height: 40px" />
+                    <div class="content ms-3" style="max-width: 220px">
+                      <p class="fw-bolder mb-1">Dam</p>
+                      <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Neque, at.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
 
-          <p>ចុះឈ្មោះតាមរយៈ​ ​<a href="#" class="text-decoration-none">Form</a></p>
+          <div class="dropdown">
+            <img src="assets/image/avatar-guest.webp" alt="" class="avatar dropdown-toggle no-caret rounded-circle ms-2"
+              style="width: 40px; height: 40px" data-bs-toggle="dropdown" aria-expanded="false" />
+            <ul class="dropdown-menu dropdown-menu-center">
+              <div class="notifi d-flex align-items-center border-bottom px-2">
+                <h5>Notification</h5>
+              </div>
+              <a href="" class="text-decoration-none py-2 pe-2 m-0 float-end" style="font-size: 14px">See all</a>
+              <li>
+                <a class="dropdown-item" data-bs-theme-value="light" href="#">
+                  <i class="bi bi-brightness-high"></i>
+                  <span class="ms-2">Light</span>
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" data-bs-theme-value="dark" href="#">
+                  <i class="bi bi-moon"></i>
+                  <span class="ms-2">Dark</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+    </nav>
+  </header>
 
+  <!-- Hero Section -->
+<main>
+    <section class="container my-4 py-5">
+    <div class="row align-items-center">
+      <div class=" col-md-12 col-lg-6 mb-3  d-flex justify-content-center ">
+        <img src="assets/Kropum/img/event3.jpg" alt="Forest EcoPreneurs" class="hero-banner img-fluid" style="width: 90%;">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="fw-bold">ប្រកួតរូបភាពអំពី <span class="text-success"> waste of life</span></h1>
+        <div class="quick-info">
+          <p><i class="fa-solid fa-calendar-days text-success"></i> កាលបរិច្ឆេទ៖ ១៩ ធ្នូ ២០២៥</p>
+          <p><i class="fa-solid fa-location-dot text-success"></i> ភ្នំពេញ, កម្ពុជា</p>
+          <p><i class="fa-brands fa-facebook text-primary"></i> <a href="https://www.facebook.com/share/p/1WMtBwHKp3/?mibextid=wwXIfr" class="text-decoration-none">Facebook</a></p>
+          <p><i class="fa-brands fa-telegram text-info"></i> <a href="https://t.me/lylythoub" class="text-decoration-none">Telegram</a></p>
+        </div>
+        <div>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeU1dYVf5LM1VWY44mqvswTMkaE8VzZaUsrM9AqgAk08EhZ5g/viewform?usp=header" class="btn btn-success btn-cta">ចុះឈ្មោះឥឡូវនេះ</a>
+          <a target="_blank" href="https://phnompenh.impacthub.net/" class="btn btn-outline-success btn-cta">ព័ត៌មានលម្អិត</a>
+        </div>
       </div>
     </div>
   </section>
+
+  <!-- Event Description -->
+  <section class="container event-description mb-5">
+    <h2>ព័ត៌មានបន្ថែមពីកម្មវិធី</h2>
+    <p>តើអ្នកជាសហគ្រិនដែលចូលចិត្តការការពារបរិស្ថាន និងចង់ជួយសហគមន៍ព្រៃឈើមែនទេ? កម្មវិធីនេះសម្រាប់អ្នក។</p>
+    <ul>
+      <li>ទទួលបានដំបូន្មាន និងការណែនាំពីអ្នកជំនាញ</li>
+      <li>សិក្ខាសាលា និងវគ្គបណ្តុះបណ្តាល</li>
+      <li>ពង្រីកបណ្តាញទំនាក់ទំនង និងការគាំទ្រ</li>
+      <li>អនុវត្តន៍ជាក់ស្តែង ដើម្បីបង្កើនផលប៉ះពាល់លើអាជីវកម្ម</li>
+    </ul>
+    <p>ចាប់ផ្តើមពីវិស័យទេសចរណ៍ប្រកបដោយនិរន្តរភាព ទៅជាផលិតផលដែលមិនប៉ះពាល់ដល់ព្រៃឈើ។ ចូលរួមដាក់ពាក្យមុនថ្ងៃទី ១៨ ខែធ្នូ ឆ្នាំ ២០២៥។</p>
+  </section>
+
+  <!-- Related Events Carousel -->
   <section>
     <div class="container py-5">
       <h3>ព្រឹត្តិការណ៍ផ្សេងទៀត</h3>
@@ -135,30 +399,25 @@
   </section>
 
 
-
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper('.swiper', {
       slidesPerView: 1,
       spaceBetween: 20,
       loop: true,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
       },
       breakpoints: {
-        0: { slidesPerView: 1 },      // mobile
-        576: { slidesPerView: 2 },    // small devices
-        768: { slidesPerView: 3 },    // tablets
-        992: { slidesPerView: 4 }     // desktops
+        576: { slidesPerView: 2 },
+        768: { slidesPerView: 3 },
+        992: { slidesPerView: 4 }
       }
     });
   </script>
-</body>
 
+</body>
 </html>
