--- a/index.html
+++ b/index.html
@@ -471,6 +471,37 @@
           </div>
         </div>
       </section>
+      <secction class="collaboration">
+        <div class="slider bg-success">
+          <div class="slide-track">
+            <div class="slide">
+              <img src="assets/image/pizza4p.png" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/greencam.png" alt="" class="slide-img">
+            </div>
+            <!-- doublicate slide -->
+             <div class="slide">
+              <img src="assets/image/pizza4p.png" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+            </div>
+            <div class="slide">
+              <img src="assets/image/greencam.png" alt="" class="slide-img">
+            </div>
+          </div>
+        </div>
+      </secction>
       <section class="benefit">
         <div class="text-center pt-4 bg-body-secondary">
           <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
