--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </ul>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
+                  <a class="nav-link nav-hover" href="donation.html">សកម្មភាពសង្គម</a>
                 </li>
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="e-commerce.html"
@@ -336,7 +336,7 @@
                 >
               </h2>
               <a
-                href="ng.html"
+                href="donation.html"
                 class="btn bg-success text-white mt-2 mb-3 mb-md-0 mt-md-5 hvr-wobble-top btn-fs"
                 data-aos="fade-right"
                 data-aos-duration="1000"
