--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
                 <input class="form-control search-1 d-md-none" type="search" placeholder="Search" aria-label="Search" />
               </form>
               <li class="nav-item">
-                <a class="nav-link active fs-5 nav-hover" aria-current="page" href="index.html">ទំព័រដើម</a>
+                <a class="nav-link fs-5 nav-hover" aria-current="page" href="index.html">ទំព័រដើម</a>
               </li>
               <li class="nav-item dropdown fs-5">
                 <a class="nav-link nav-hover no-caret dropdown-toggle" href="index.html" role="button"
@@ -60,11 +60,23 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item fs-5">
-                <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
+              <li class="nav-item dropdown fs-5">
+                <a class="nav-link nav-hover no-caret dropdown-toggle" href="donation.html" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  សកម្មភាពសង្គម
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="event.html">ព្រឹត្តិការណ៍</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="donation.html">បរិច្ចាគ
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item fs-5">
-                <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
+                <a class="nav-link active nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
               </li>
               <li class="nav-item fs-5">
                 <a class="nav-link nav-hover" aria-current="page" href="about.html">អំពីយើង</a>
