--- a/event.html
+++ b/event.html
@@ -59,8 +59,20 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item fs-5">
-                <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
+              <li class="nav-item dropdown fs-5">
+                <a class="nav-link nav-hover no-caret dropdown-toggle" href="donation.html" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  សកម្មភាពសង្គម
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="event.html">ព្រឹត្តិការណ៍</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="donation.html">បរិច្ចាគ
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item fs-5">
                 <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
