--- a/signin.html
+++ b/signin.html
@@ -13,15 +13,23 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
+<style>
+    .signin-area {
+    overflow: hidden;
+}
+
+</style>
 
 <body class="signin-page">
     <main>
         <section class="signin-area">
             <div class="container">
-                <div class="row justify-content-center align-items-center min-vh-100">
+                <div class="row justify-content-center align-items-center min-vh-100" >
                     <div class="col-10 col-md-10 position-relative">
                         <img src="assets/chhorng/img/trashbin.png" class="position-absolute " alt="" style="width: 90px; height: 90px; left: -50px; top:-35px; transform: rotate(30deg); ">
-                        <img src="assets/chhorng/img/trash-recycle-sign.png" class="position-absolute " alt="" style="width: 90px; height: 90px; right: -50px; top:-35px; transform: rotate(350deg); ">
+                        <img src="assets/chhorng/img/image.png" class="position-absolute object-fit-contain" alt=""  style="width: 100px; height: 100px; right: -50px;   top:-35px; transform: rotate(350deg); ">
+                        <img src="assets/chhorng/img/trash-recycle-sign.png" class="position-absolute " alt="" style="width: 90px; height: 90px; right: -50px; bottom:-35px; transform: rotate(30deg); ">
+                        <img src="assets/chhorng/img/recy-icon.png" class="position-absolute" alt="" style="width: 65px; height: 65px; left: -30px; bottom:-24px; transform: rotate(10deg); ">
                         <div class="row bg-light rounded-4 shadow-sm">
                             <!-- Form Section -->
                             <div class="col-11 col-md-5 py-4">
