--- a/index.html
+++ b/index.html
@@ -97,20 +97,28 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown fs-5">
-                <a class="nav-link nav-hover no-caret dropdown-toggle" href="donation.html" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  សកម្មភាពសង្គម
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="event.html">ព្រឹត្តិការណ៍</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="donation.html">បរិច្ចាគ
-                    </a>
-                  </li>
-                </ul>
-              </li>
+                  <a
+                    class="nav-link nav-hover no-caret dropdown-toggle"
+                    href="donation.html"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    សកម្មភាពសង្គម
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="event.html"
+                        >ព្រឹត្តិការណ៍</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="donation.html"
+                        >បរិច្ចាគ
+                      </a>
+                    </li>
+                  </ul>
+                </li>
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="e-commerce.html"
                     >ផលិតផលកែច្នៃ</a
@@ -486,29 +494,45 @@
         <div class="slider bg-success">
           <div class="slide-track">
             <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="-1-img">
+              <img src="assets/image/pizza4p.png" alt="" class="-1-img" />
             </div>
             <div class="slide-1">
-              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+              <img
+                src="assets/image/circleclothes.jpg"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+              <img
+                src="assets/image/trashisnice.png"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img">
+              <img src="assets/image/greencam.png" alt="" class="slide-img" />
             </div>
             <!-- doublicate slide -->
-             <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="slide-img">
+            <div class="slide-1">
+              <img src="assets/image/pizza4p.png" alt="" class="slide-img" />
             </div>
             <div class="slide-1">
-              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+              <img
+                src="assets/image/circleclothes.jpg"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+              <img
+                src="assets/image/trashisnice.png"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img">
+              <img src="assets/image/greencam.png" alt="" class="slide-img" />
             </div>
           </div>
         </div>
