--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -17,7 +17,8 @@
         <section class="forgetpwd-area">
             <div class="container">
                 <div class="row justify-content-center align-items-center min-vh-100">
-                    <div class="col-12 col-md-10 col-lg-10">
+                    <div class="col-12 col-md-10 col-lg-10 position-relative">
+                        <img src="assets/chhorng/img/Sirent.png" class="position-absolute" alt="" style="width: 90px; height: 90px; left: -30px; top:-50px; transform: rotate(330deg); ">
                         <div class="bg-light py-5 px-3 px-md-5 rounded-4 shadow-sm">
                             <div class="row justify-content-center align-items-center">
                                 <!-- Left Image -->
