--- a/cart.html
+++ b/cart.html
@@ -81,7 +81,7 @@
               <tfoot>
                 <tr>
                   <th colspan="2" class="text-end fs-kp">តម្លៃសរុប:</th>
-                  <th id="cart-total" class="text-danger fs-kp" colspan="2">$199.00</th>
+                  <th id="cart-total" class="text-danger fs-kp" colspan="2">$204.00</th>
                 </tr>
               </tfoot>
             </table>
@@ -96,9 +96,8 @@
     <div class="toast-container position-fixed p-3 toast-position">
       <div id="mainToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
-          <strong class="me-auto fs-kp">សារព័ត៌មាន</strong>
-          <small class="ms-auto">Just now</small>
-          <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+          <small>Just now</small>
+          <button type="button" class="btn-close ms-auto" data-bs-dismiss="toast"></button>
         </div>
         <div class="toast-body fs-kp" id="toastMessage"></div>
       </div>
@@ -108,7 +107,7 @@
     <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header bg-success">
             <h5 class="modal-title fs-kp">កែប្រែផលិតផល</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
