--- a/donation.html
+++ b/donation.html
@@ -125,7 +125,7 @@
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -199,20 +199,28 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown fs-5">
-                <a class="nav-link nav-hover no-caret dropdown-toggle" href="donation.html" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  សកម្មភាពសង្គម
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="event.html">ព្រឹត្តិការណ៍</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="donation.html">បរិច្ចាគ
-                    </a>
-                  </li>
-                </ul>
-              </li>
+                  <a
+                    class="nav-link active nav-hover no-caret dropdown-toggle"
+                    href="donation.html"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    សកម្មភាពសង្គម
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="event.html"
+                        >ព្រឹត្តិការណ៍</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="donation.html"
+                        >បរិច្ចាគ
+                      </a>
+                    </li>
+                  </ul>
+                </li>
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="e-commerce.html"
                     >ផលិតផលកែច្នៃ</a
@@ -230,16 +238,6 @@
             </div>
           </div>
           <div class="user-profile d-flex align-items-center">
-            <button
-              class="navbar-toggler border-0 shadow-none fs-4"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasNavbar"
-              aria-controls="offcanvasNavbar"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
             <!-- Search Button -->
             <form class="d-flex" role="search">
               <input
@@ -418,6 +416,16 @@
                 </li>
               </ul>
             </div>
+            <button
+              class="navbar-toggler border-0 shadow-none fs-4"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
         </div>
       </nav>
