--- a/index.html
+++ b/index.html
@@ -281,35 +281,42 @@
 
             <div class="dropdown">
               <img
-                src="assets/image/avatar-guest.webp"
+                src="assets/image/avatar-4.jpg"
                 alt=""
-                class="avatar dropdown-toggle no-caret rounded-circle ms-2"
+                class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               />
-              <ul class="dropdown-menu dropdown-menu-center">
-                <div
-                  class="notifi d-flex align-items-center border-bottom px-2"
-                >
-                  <h5>Notification</h5>
-                </div>
-                <a
-                  href=""
-                  class="text-decoration-none py-2 pe-2 m-0 float-end"
-                  style="font-size: 14px"
-                  >See all</a
-                >
+              <ul class="dropdown-menu dropdown-menu-center py-0">
+                <li class="notifi border-bottom">
+                  <a href="" class="dropdown-item d-flex align-items-center py-2">
+                    <img
+                      src="assets/image/avatar-4.jpg"
+                      alt=""
+                      class="avatar dropdown-toggle rounded-circle mx-2"
+                      style="width: 35px; height: 35px"
+                    />
+                    <h6 class="mb-0 mt-1">Nazaby</h6>
+                  </a>
+                </li>
+
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="light" href="#">
-                    <i class="bi bi-brightness-high"></i>
-                    <span class="ms-2">Light</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-person-circle"></i>
+                    <span class="ms-2">ពត៌មានអ្នកប្រើប្រាស់</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="dark" href="#">
-                    <i class="bi bi-moon"></i>
-                    <span class="ms-2">Dark</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-gear"></i>
+                    <span class="ms-2">ការកំណត់</span>
+                  </a>
+                </li>
+                <li class="border-top">
+                  <a class="dropdown-item py-2" href="landing.html">
+                    <i class="bi bi-box-arrow-in-left"></i>
+                    <span class="ms-2">ចាក់ចេញ</span>
                   </a>
                 </li>
               </ul>
@@ -482,16 +489,28 @@
       </section>
       <section class="collaboration">
         <div class="slider bg-success">
-            <div class="list">
-              <div class="slide-item" style="--position: 1"><img src="assets/image/circleclothes.png" alt=""></div>
-              <div class="slide-item" style="--position: 2"><img src="assets/image/pizza4p.png" alt=""></div>
-              <div class="slide-item" style="--position: 3"><img src="assets/image/trashisnice.png" alt=""></div>
-              <div class="slide-item" style="--position: 4"><img src="assets/image/circleclothes.png" alt=""></div>
-              <div class="slide-item" style="--position: 5"><img src="assets/image/pizza4p.png" alt=""></div>
-              <div class="slide-item" style="--position: 6"><img src="assets/image/trashisnice.png" alt=""></div>
+          <div class="list">
+            <div class="slide-item" style="--position: 1">
+              <img src="assets/image/circleclothes.png" alt="" />
             </div>
+            <div class="slide-item" style="--position: 2">
+              <img src="assets/image/pizza4p.png" alt="" />
+            </div>
+            <div class="slide-item" style="--position: 3">
+              <img src="assets/image/trashisnice.png" alt="" />
+            </div>
+            <div class="slide-item" style="--position: 4">
+              <img src="assets/image/circleclothes.png" alt="" />
+            </div>
+            <div class="slide-item" style="--position: 5">
+              <img src="assets/image/pizza4p.png" alt="" />
+            </div>
+            <div class="slide-item" style="--position: 6">
+              <img src="assets/image/trashisnice.png" alt="" />
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
       <section class="benefit">
         <div class="text-center pt-8 bg-body-secondary">
           <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
