--- a/landing.html
+++ b/landing.html
@@ -109,13 +109,19 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="signin.html" class="btn btn-success mx-1 mt-1 landing-btn">ចូលគណនី</a>
-            <a href="register.html" class="btn btn-success mx-1 mt-1 landing-btn">បង្កើតគណនី</a>
+            <a href="signin.html" class="btn btn-success mx-1 mt-1 landing-btn"
+              >ចូលគណនី</a
+            >
+            <a
+              href="register.html"
+              class="btn border border-success mx-1 mt-1 landing-btn register-btn"
+              >បង្កើតគណនី</a
+            >
           </div>
         </div>
       </nav>
     </header>
-        <main>
+    <main>
       <section class="hero-banner mt-9 mt-md-0">
         <img
           src="assets/image/enviroment.jpg"
@@ -271,29 +277,45 @@
         <div class="slider bg-success">
           <div class="slide-track">
             <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="-1-img">
+              <img src="assets/image/pizza4p.png" alt="" class="-1-img" />
             </div>
             <div class="slide-1">
-              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+              <img
+                src="assets/image/circleclothes.jpg"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+              <img
+                src="assets/image/trashisnice.png"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img">
+              <img src="assets/image/greencam.png" alt="" class="slide-img" />
             </div>
             <!-- doublicate slide -->
-             <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="slide-img">
+            <div class="slide-1">
+              <img src="assets/image/pizza4p.png" alt="" class="slide-img" />
             </div>
             <div class="slide-1">
-              <img src="assets/image/circleclothes.jpg" alt="" class="slide-img">
+              <img
+                src="assets/image/circleclothes.jpg"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/trashisnice.png" alt="" class="slide-img">
+              <img
+                src="assets/image/trashisnice.png"
+                alt=""
+                class="slide-img"
+              />
             </div>
             <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img">
+              <img src="assets/image/greencam.png" alt="" class="slide-img" />
             </div>
           </div>
         </div>
