--- a/user_profile.html
+++ b/user_profile.html
@@ -71,7 +71,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link active fs-5 nav-hover"
+                    class="nav-link fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -290,7 +290,10 @@
               />
               <ul class="dropdown-menu dropdown-menu-center py-0">
                 <li class="notifi border-bottom">
-                  <a href="" class="dropdown-item d-flex align-items-center py-2">
+                  <a
+                    href=""
+                    class="dropdown-item d-flex align-items-center py-2"
+                  >
                     <img
                       src="assets/image/avatar-4.jpg"
                       alt=""
@@ -335,292 +338,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      <section class="hero-banner mt-9 mt-md-0">
-        <img
-          src="assets/image/enviroment.jpg"
-          alt=""
-          class="bg-banner-img position-relative"
-        />
-        <div class="container banner">
-          <div class="row d-flex align-items-center">
-            <div class="col-12 col-md-6">
-              <h6 class="text-success fs-6 mt-5" id="text-animation"></h6>
-              <h2 class="mt-3 text-fs">
-                សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
-                  class="text-success"
-                  >បរិស្ថាន</span
-                >
-              </h2>
-              <a
-                href="donation.html"
-                class="btn bg-success text-white mt-2 mb-3 mb-md-0 mt-md-5 hvr-wobble-top btn-fs"
-                data-aos="fade-right"
-                data-aos-duration="1000"
-                data-aos-delay="200"
-              >
-                ចូលរួមជាមួយយើង
-              </a>
-            </div>
-            <div class="col-12 col-md-6">
-              <div class="banner-img position-relative d-none d-md-block">
-                <img
-                  src="assets/image/banner-1.png"
-                  alt=""
-                  class="banner-img"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="type-recycle pt-5 pb-8">
-        <div class="container">
-          <h2 class="scale-up-ver-center text-center pt-4 pb-3">
-            ប្រភេទនៃការកែច្នៃ
-          </h2>
-          <div class="row g-3">
-            <!-- 1 -->
-            <div class="col-6 col-md-3">
-              <div
-                class="card card-responsive p-4"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="50"
-                data-aos-offset="0"
-              >
-                <div class="content text-center">
-                  <div
-                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  >
-                    <img
-                      src="assets/image/recycle type/barrel.png"
-                      alt=""
-                      class=""
-                    />
-                  </div>
-                  <h4>ការកែច្នៃដោយគីមី</h4>
-                  <p>
-                    ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
-                    ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី។
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- 2 -->
-            <div class="col-6 col-md-3">
-              <div
-                class="card card-responsive p-4"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="50"
-                data-aos-offset="0"
-              >
-                <div class="content text-center">
-                  <div
-                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  >
-                    <img
-                      src="assets/image/recycle type/machin.png"
-                      alt=""
-                      class=""
-                    />
-                  </div>
-                  <h4>ការកែច្នៃមេកានិច</h4>
-                  <p>
-                    ការបំបែកសំណល់ទៅជាវត្ថុធាតុដើម ហើយប្រើឡើងវិញដើម្បីផលិតផលថ្មី។
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- 3 -->
-            <div class="col-6 col-md-3">
-              <div
-                class="card card-responsive p-4"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="50"
-                data-aos-offset="0"
-              >
-                <div class="content text-center">
-                  <div
-                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  >
-                    <img
-                      src="assets/image/recycle type/organic.png"
-                      alt=""
-                      class=""
-                    />
-                  </div>
-                  <h4>ការកែច្នៃសរីរាង្គ</h4>
-                  <p>ការកែច្នៃសំណល់ដែលរលួយបាន តាមរយៈការធ្វើជាជីកំប៉ុស។</p>
-                </div>
-              </div>
-            </div>
-            <!-- 4 -->
-            <div class="col-6 col-md-3">
-              <div
-                class="card card-responsive p-4"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="50"
-                data-aos-offset="0"
-              >
-                <div class="content text-center">
-                  <div
-                    class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
-                  >
-                    <img
-                      src="assets/image/recycle type/energy.png"
-                      alt=""
-                      class=""
-                    />
-                  </div>
-                  <h4>ការទាញថាមពល</h4>
-                  <p>
-                    ការដុតសំណល់ ដើម្បីបង្កើតកំដៅ អគ្គិសនី ឬឥន្ធនៈ
-                    ជំនួសការបោះចោលទៅកន្លែងសំរាម
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="collaboration">
-        <div class="slider bg-success">
-          <div class="list">
-            <div class="slide-item" style="--position: 1">
-              <img src="assets/image/circleclothes.png" alt="" />
-            </div>
-            <div class="slide-item" style="--position: 2">
-              <img src="assets/image/pizza4p.png" alt="" />
-            </div>
-            <div class="slide-item" style="--position: 3">
-              <img src="assets/image/trashisnice.png" alt="" />
-            </div>
-            <div class="slide-item" style="--position: 4">
-              <img src="assets/image/circleclothes.png" alt="" />
-            </div>
-            <div class="slide-item" style="--position: 5">
-              <img src="assets/image/pizza4p.png" alt="" />
-            </div>
-            <div class="slide-item" style="--position: 6">
-              <img src="assets/image/trashisnice.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="benefit">
-        <div class="text-center pt-8 bg-body-secondary">
-          <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
-        </div>
-        <div class="content">
-          <div class="content-body bg-body-secondary">
-            <div class="text container py-3">
-              <div class="row align-items-center">
-                <div class="col-12 col-md-8">
-                  <h3>១. ការការពារបរិស្ថាន</h3>
-                  <p>
-                    <span class="me-1">-</span>
-                    ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម
-                    និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
-                  </p>
-                  <p>
-                    <span class="me-1">-</span>
-                    បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
-                    ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
-                  </p>
-                  <p>
-                    <span class="me-1">-</span>
-                    ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
-                    ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
-                  </p>
-                </div>
-                <div class="col-12 col-md-4">
-                  <img
-                    src="assets/image/Environmental Protection.jpg"
-                    alt=""
-                    class="img-fluid rounded-4"
-                    data-aos="flip-left"
-                    data-aos-duration="1000"
-                    data-aos-delay="200"
-                    height="300px"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="content-body bg-white">
-            <div class="text container py-3">
-              <div class="row align-items-center">
-                <div class="col-12 col-md-8">
-                  <h3>២. ការសន្សំថាមពល</h3>
-                  <p>
-                    <span class="me-1">-</span>
-                    ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម
-                    រហូតដល់ការផលិត និងដឹកជញ្ជូន។
-                  </p>
-                  <p>
-                    <span class="me-1">-</span> ការកែច្នៃប្រើថាមពលតិចជាង
-                    ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
-                  </p>
-                </div>
-                <div class="col-12 col-md-4">
-                  <img
-                    src="assets/image/energy save.jpg"
-                    alt=""
-                    class="img-fluid"
-                    data-aos="flip-left"
-                    data-aos-duration="1000"
-                    data-aos-delay="200"
-                    style="height: 300px"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="content-body bg-body-secondary pb-5">
-            <div class="text container py-3">
-              <div class="row align-items-center">
-                <div class="col-12 col-md-8">
-                  <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
-                  <p>
-                    <span class="me-1">-</span>
-                    ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄)
-                    ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
-                  </p>
-                  <p>
-                    <span class="me-1">-</span>
-                    ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន
-                    (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។
-                    ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
-                  </p>
-                </div>
-                <div class="col-12 col-md-4">
-                  <img
-                    src="assets/image/climate.jpg"
-                    alt=""
-                    class="img-fluid rounded-4"
-                    data-aos="flip-left"
-                    data-aos-duration="1000"
-                    data-aos-delay="200"
-                    style="height: 300px"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-random">
-        <div class="container">
-          <div class="row">
-            <div class="test"></div>
-          </div>
-        </div>
-      </section>
-    </main>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
