--- a/landing.html
+++ b/landing.html
@@ -160,9 +160,9 @@
           </div>
         </div>
       </section>
-      <section class="type-recycle py-5">
+      <section class="type-recycle pt-5 pb-8">
         <div class="container">
-          <h2 class="scale-up-ver-center text-center pt-4">
+          <h2 class="scale-up-ver-center text-center pt-4 pb-3">
             ប្រភេទនៃការកែច្នៃ
           </h2>
           <div class="row g-3">
@@ -273,55 +273,32 @@
           </div>
         </div>
       </section>
-      <secction class="collaboration">
+      <section class="collaboration">
         <div class="slider bg-success">
-          <div class="slide-track">
-            <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="-1-img" />
+          <div class="list">
+            <div class="slide-item" style="--position: 1">
+              <img src="assets/image/circleclothes.png" alt="" />
             </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/circleclothes.jpg"
-                alt=""
-                class="slide-img"
-              />
+            <div class="slide-item" style="--position: 2">
+              <img src="assets/image/pizza4p.png" alt="" />
             </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/trashisnice.png"
-                alt=""
-                class="slide-img"
-              />
+            <div class="slide-item" style="--position: 3">
+              <img src="assets/image/trashisnice.png" alt="" />
             </div>
-            <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img" />
+            <div class="slide-item" style="--position: 4">
+              <img src="assets/image/circleclothes.png" alt="" />
             </div>
-            <!-- doublicate slide -->
-            <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="slide-img" />
+            <div class="slide-item" style="--position: 5">
+              <img src="assets/image/pizza4p.png" alt="" />
             </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/circleclothes.jpg"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/trashisnice.png"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img" />
+            <div class="slide-item" style="--position: 6">
+              <img src="assets/image/trashisnice.png" alt="" />
             </div>
           </div>
         </div>
-      </secction>
+      </section>
       <section class="benefit">
-        <div class="text-center pt-4 bg-body-secondary">
+        <div class="text-center pt-8 bg-body-secondary">
           <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
         </div>
         <div class="content">
