--- a/index.html
+++ b/index.html
@@ -290,7 +290,10 @@
               />
               <ul class="dropdown-menu dropdown-menu-center py-0">
                 <li class="notifi border-bottom">
-                  <a href="" class="dropdown-item d-flex align-items-center py-2">
+                  <a
+                    href=""
+                    class="dropdown-item d-flex align-items-center py-2"
+                  >
                     <img
                       src="assets/image/avatar-4.jpg"
                       alt=""
